...
    <string name="auth_failed">Authentication error, Please enter a valid email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_drivers_id">Driver\'s License</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registered? Login </string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_sign_up">Sign Up </string>
    <string name="err_msg_email">Enter a valid email.</string>
    <string name="err_msg_required">Required !!</string>
    <string name="err_msg_password">Enter a valid password with min 6 characters.</string>
...
    <string name="btn_create_listing"> Create Listing </string>
    <string name="btn_delete_listing"> Delete Listing </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings related to navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to create listing -->
    <string name="create_listing_choose_spot_heading">Choose Parking Spot</string>
    <string name="enter_spot_description">Enter Description</string>
    <string name="choose_start_date">Choose Start Date</string>
    <string name="choose_end_date">Choose End Date</string>
    <string name="choose_start_time">Choose Start Time</string>
    <string name="choose_end_time">Choose End Time</string>>
    <string name="enter_price">Enter Price</string>
    <string name="btn_next_step">Next Step</string>
    <string name="btn_confirm">Confirm</string>>
    <string name="btn_okay">Okay</string>
    <string name="btn_browse">Rent Listing</string>

    <!-- Strings related to browse listing -->
    <string name="enter_card_number">Enter Card Number</string>
    <string name="enter_cvv">Enter CVV</string>
...
    <string name="user_reservations_heading">Listings I\'ve Reserved</string>
    <string name="browse_multiple_listings_heading">All listings for this parking spot</string>

    <!-- Strings related to profile or review -->
    <string name="write_review_heading">Write a Review</string>
    <string name="enter_review">Enter Review</string>
    <string name="btn_submit">Submit</string>
    <string name="write_review_confirmed">Review has been submitted!</string>

    <!-- Strings related to Edit Profile -->
    <string name="btn_edit_name">Edit Name</string>
    <string name="btn_manage_spots">Manage Spots</string>
    <string name="enter_first_name">First Name</string>
...
